--- a/galive_server_logic/bin/develop/jdbc.properties
+++ b/galive_server_logic/bin/develop/jdbc.properties
@@ -10,11 +10,11 @@ http.action.logic=/galive/logic
 #---------------------------Netty---------------------------
 netty.bind.port=52194
 
-#---------------------------Mina---------------------------
-mina.bufferSize=8192
-mina.bothIdleTime=60
-mina.heartBeat=30
-mina.writeTimeout=30
+#---------------------------Netty---------------------------
+netty.bufferSize=8192
+netty.bothIdleTime=60
+netty.heartBeat=30
+netty.writeTimeout=30
 
 #---------------------------Mongo---------------------------
 mongo.host=127.0.0.1
