--- a/galive_server_logic/bin/develop/jdbc.properties
+++ b/galive_server_logic/bin/develop/jdbc.properties
@@ -4,12 +4,9 @@ http.port=8080
 http.action.logic=/galive/logic
 
 #---------------------------Netty---------------------------
-netty.bind.port=52194
-
-#---------------------------Netty---------------------------
 netty.bufferSize=8192
 netty.bothIdleTime=60
-netty.heartBeat=30
+netty.heartBeat.interval=30
 netty.writeTimeout=30
 
 #---------------------------Mongo---------------------------
