--- a/galive_server_logic/bin/develop/jdbc.properties
+++ b/galive_server_logic/bin/develop/jdbc.properties
@@ -1,6 +1,6 @@
 
 #---------------------------Http---------------------------
-http.port=8080
+http.port=5888
 http.action.logic=/galive/logic
 
 #---------------------------Netty---------------------------
@@ -30,9 +30,9 @@ redis.maxTotal=5000
 redis.maxIdle=1000
 redis.connectTimeout=10000
 redis.maxWaitMillis=60000
-redis.testWhileIdle=false
-redis.testOnBorrow=false
-redis.testOnReturn=false
+redis.testWhileIdle=true
+redis.testOnBorrow=true
+redis.testOnReturn=true
 
 
 
