--- a/build.gradle
+++ b/build.gradle
@@ -2,6 +2,10 @@ subprojects {
     apply plugin: 'java'
     apply plugin: 'eclipse'
 
+	tasks.withType(JavaCompile) {
+	    options.encoding = 'utf-8'
+	}
+
 	sourceCompatibility = 1.8
 	version = '1.0'
 
