--- a/galive_server_logic/bin/distribution/jdbc.properties
+++ b/galive_server_logic/bin/distribution/jdbc.properties
@@ -11,11 +11,11 @@ mongo.host=127.0.0.1
 mongo.port=27017
 mongo.username=admin
 mongo.password=super@123$
-mongo.dbName=ga_live
-mongo.poolSize=10
-mongo.threadsAllowedToBlockForConnectionMultiplier=5
-mongo.maxWaitTime=120000
-mongo.connectTimeout=10000
+mongo.dbName=galive
+mongo.poolSize=50
+mongo.threadsAllowedToBlockForConnectionMultiplier=10
+mongo.maxWaitTime=30000
+mongo.connectTimeout=30000
 mongo.socketTimeout=0
 mongo.socketKeepAlive=false
 
@@ -23,16 +23,16 @@ mongo.socketKeepAlive=false
 
 #redis.auth=superman
 
-redis.keyPrefix=ga_live:
+redis.keyPrefix=galive:
 redis.host=127.0.0.1
 redis.port=6379
-redis.maxTotal=5000
-redis.maxIdle=1000
-redis.connectTimeout=10000
-redis.maxWaitMillis=60000
-redis.testWhileIdle=true
-redis.testOnBorrow=true
-redis.testOnReturn=true
+redis.maxTotal=500
+redis.maxIdle=50
+redis.connectTimeout=30000
+redis.maxWaitMillis=30000
+redis.testWhileIdle=false
+redis.testOnBorrow=false
+redis.testOnReturn=false
 
 
 
