--- a/galive_server_logic/src/main/resources/develop/jdbc.properties
+++ b/galive_server_logic/src/main/resources/develop/jdbc.properties
@@ -1,6 +1,6 @@
 
 #---------------------------Http---------------------------
-http.port=5888
+http.port=8080
 http.action.logic=/galive/logic
 
 #---------------------------Netty---------------------------
@@ -12,10 +12,10 @@ mongo.port=27017
 mongo.username=admin
 mongo.password=super@123$
 mongo.dbName=galive
-mongo.poolSize=10
-mongo.threadsAllowedToBlockForConnectionMultiplier=5
-mongo.maxWaitTime=120000
-mongo.connectTimeout=10000
+mongo.poolSize=50
+mongo.threadsAllowedToBlockForConnectionMultiplier=10
+mongo.maxWaitTime=30000
+mongo.connectTimeout=30000
 mongo.socketTimeout=0
 mongo.socketKeepAlive=false
 
@@ -26,13 +26,13 @@ mongo.socketKeepAlive=false
 redis.keyPrefix=galive:
 redis.host=127.0.0.1
 redis.port=6379
-redis.maxTotal=5000
-redis.maxIdle=1000
-redis.connectTimeout=10000
-redis.maxWaitMillis=60000
-redis.testWhileIdle=true
-redis.testOnBorrow=true
-redis.testOnReturn=true
+redis.maxTotal=500
+redis.maxIdle=50
+redis.connectTimeout=30000
+redis.maxWaitMillis=30000
+redis.testWhileIdle=false
+redis.testOnBorrow=false
+redis.testOnReturn=false
 
 
 
