--- a/galive_server_logic/src/main/resources/develop/jdbc.properties
+++ b/galive_server_logic/src/main/resources/develop/jdbc.properties
@@ -26,13 +26,13 @@ mongo.socketKeepAlive=false
 redis.keyPrefix=galive:
 redis.host=127.0.0.1
 redis.port=6379
-redis.maxTotal=5000
+redis.maxTotal=1000
 redis.maxIdle=500
 redis.connectTimeout=30000
 redis.maxWaitMillis=30000
-redis.testWhileIdle=false
-redis.testOnBorrow=false
-redis.testOnReturn=false
+redis.testWhileIdle=true
+redis.testOnBorrow=true
+redis.testOnReturn=true
 
 
 
