--- a/galive_server_logic/bin/distribution/jdbc.properties
+++ b/galive_server_logic/bin/distribution/jdbc.properties
@@ -26,13 +26,13 @@ mongo.socketKeepAlive=false
 redis.keyPrefix=galive:
 redis.host=127.0.0.1
 redis.port=6379
-redis.maxTotal=1000
-redis.maxIdle=500
+redis.maxTotal=5000
+redis.maxIdle=1000
 redis.connectTimeout=60000
 redis.maxWaitMillis=60000
-redis.testWhileIdle=true
+redis.testWhileIdle=false
 redis.testOnBorrow=true
-redis.testOnReturn=true
+redis.testOnReturn=false
 
 
 
