--- a/galive_server_logic/build.gradle
+++ b/galive_server_logic/build.gradle
@@ -6,6 +6,7 @@ dependencies {
     compile 'org.mongodb.morphia:morphia:1.1.1'
     compile 'redis.clients:jedis:2.8.1'
     compile 'com.notnoop.apns:apns:1.0.0.Beta6'
+    compile 'org.apache.httpcomponents:httpclient:4.5.2'
 }
 
 
