--- a/galive_server_logic/bin/distribution/jdbc.properties
+++ b/galive_server_logic/bin/distribution/jdbc.properties
@@ -1,6 +1,6 @@
 
 #---------------------------Http---------------------------
-http.port=5888
+http.port=8030
 http.action.logic=/galive/logic
 
 #---------------------------Netty---------------------------
@@ -11,7 +11,7 @@ mongo.host=127.0.0.1
 mongo.port=27017
 mongo.username=admin
 mongo.password=super@123$
-mongo.dbName=galive
+mongo.dbName=galive_game
 mongo.poolSize=50
 mongo.threadsAllowedToBlockForConnectionMultiplier=10
 mongo.maxWaitTime=30000
@@ -23,7 +23,7 @@ mongo.socketKeepAlive=false
 
 #redis.auth=superman
 
-redis.keyPrefix=galive:
+redis.keyPrefix=galive_game:
 redis.host=127.0.0.1
 redis.port=6379
 redis.maxTotal=50000
