--- a/galive_server_logic/build.gradle
+++ b/galive_server_logic/build.gradle
@@ -16,7 +16,7 @@ task fatJar(type: Jar) {
         			'Implementation-Version': version,
         			'Main-Class': 'com.galive.logic.ApplicationMain'
     }
-    baseName = "galive_server_logic"
+    baseName = "galive_server_logic_game"
     from { configurations.compile.collect { it.isDirectory() ? it : zipTree(it) } }
     with jar
 }
