--- a/galive_server_logic/build.gradle
+++ b/galive_server_logic/build.gradle
@@ -8,6 +8,7 @@ dependencies {
     compile 'com.notnoop.apns:apns:1.0.0.Beta6'
     compile 'org.apache.httpcomponents:httpclient:4.5.2'
     compile group: 'com.sun.mail', name: 'javax.mail', version: '1.5.6'
+    compile group: 'commons-io', name: 'commons-io', version: '2.5'
 }
 
 
