--- a/galive_server_logic/bin/develop/jdbc.properties
+++ b/galive_server_logic/bin/develop/jdbc.properties
@@ -2,6 +2,7 @@
 #---------------------------Http---------------------------
 http.port=4050
 http.action.logic=/galive/logic
+http.action.file=/galive/file
 
 #---------------------------Netty---------------------------
 netty.bufferSize=8192
