--- a/galive_server_logic/build.gradle
+++ b/galive_server_logic/build.gradle
@@ -9,6 +9,8 @@ dependencies {
     compile 'org.apache.httpcomponents:httpclient:4.5.2'
     compile group: 'com.sun.mail', name: 'javax.mail', version: '1.5.6'
     compile group: 'commons-io', name: 'commons-io', version: '2.5'
+    // https://mvnrepository.com/artifact/com.aliyun.oss/aliyun-sdk-oss
+	compile group: 'com.aliyun.oss', name: 'aliyun-sdk-oss', version: '2.4.0'
 }
 
 
