--- a/galive_server_framework/build.gradle
+++ b/galive_server_framework/build.gradle
@@ -1,15 +1,17 @@
 
 dependencies {
-    compile 'commons-lang:commons-lang:2.6'
-    compile 'commons-codec:commons-codec:1.10'
-    compile 'org.apache.commons:commons-collections4:4.1'
-    compile 'org.apache.commons:commons-compress:1.10'//压缩
-    compile 'org.eclipse.jetty:jetty-server:9.3.8.v20160314'
-    compile 'org.eclipse.jetty:jetty-servlet:9.3.8.v20160314'
-    compile 'org.slf4j:slf4j-api:1.7.20'
-    compile 'ch.qos.logback:logback-classic:1.1.6'
-    compile 'com.alibaba:fastjson:1.2.8'
-    compile 'io.netty:netty-all:4.0.35.Final'
-    compile 'commons-daemon:commons-daemon:1.0.15'
-    compile 'dom4j:dom4j:1.6.1'
+    compile group: 'commons-lang', name: 'commons-lang', version: '2.6'
+    compile group: 'commons-codec', name: 'commons-codec', version: '1.10'
+    compile group: 'org.apache.commons', name: 'commons-collections4', version: '4.1'
+    compile group: 'org.apache.commons', name: 'commons-compress', version: '1.12'//压缩
+    compile group: 'org.eclipse.jetty', name: 'jetty-server', version: '9.4.0.v20161208'
+    compile group: 'org.eclipse.jetty', name: 'jetty-servlet', version: '9.4.0.v20161208'
+    compile group: 'org.slf4j', name: 'slf4j-api', version: '1.7.22'
+    compile group: 'ch.qos.logback', name: 'logback-classic', version: '1.1.8'
+    compile group: 'ch.qos.logback', name: 'logback-core', version: '1.1.8'
+    compile group: 'ch.qos.logback', name: 'logback-access', version: '1.1.8'
+    compile group: 'com.alibaba', name: 'fastjson', version: '1.2.23'
+    compile group: 'io.netty', name: 'netty-all', version: '4.1.6.Final'
+    compile group: 'commons-daemon', name: 'commons-daemon', version: '1.0.15'
+    compile group: 'dom4j', name: 'dom4j', version: '1.6.1'
 }
