--- a/galive_server_logic/build.gradle
+++ b/galive_server_logic/build.gradle
@@ -2,15 +2,13 @@
 dependencies {
  	compile project(':galive_server_framework')
  	compile project(':galive_server_common')
- 	compile 'org.mongodb:mongo-java-driver:3.2.2'
-    compile 'org.mongodb.morphia:morphia:1.1.1'
-    compile 'redis.clients:jedis:2.8.1'
-    compile 'com.notnoop.apns:apns:1.0.0.Beta6'
-    compile 'org.apache.httpcomponents:httpclient:4.5.2'
-    compile group: 'com.sun.mail', name: 'javax.mail', version: '1.5.6'
-    compile group: 'commons-io', name: 'commons-io', version: '2.5'
-    // https://mvnrepository.com/artifact/com.aliyun.oss/aliyun-sdk-oss
-	compile group: 'com.aliyun.oss', name: 'aliyun-sdk-oss', version: '2.4.0'
+ 	compile group: 'org.mongodb', name: 'mongo-java-driver', version: '3.4.1'
+    compile group: 'org.mongodb.morphia', name: 'morphia', version: '1.3.0'
+    compile group: 'redis.clients', name: 'jedis', version: '2.9.0'
+    compile group: 'org.apache.httpcomponents', name: 'httpclient', version: '4.5.2'
+    compile group: 'com.fasterxml.jackson.core', name: 'jackson-core', version: '2.8.5'
+    compile group: 'com.fasterxml.jackson.core', name: 'jackson-annotations', version: '2.8.5'
+    compile group: 'com.fasterxml.jackson.core', name: 'jackson-databind', version: '2.8.5'
 }
 
 
