--- a/galive_server_logic/bin/develop/jdbc.properties
+++ b/galive_server_logic/bin/develop/jdbc.properties
@@ -31,9 +31,9 @@ redis.maxTotal=50000
 redis.maxIdle=10000
 redis.connectTimeout=30000
 redis.maxWaitMillis=30000
-redis.testWhileIdle=true
-redis.testOnBorrow=true
-redis.testOnReturn=true
+redis.testWhileIdle=false
+redis.testOnBorrow=false
+redis.testOnReturn=false
 
 
 
