--- a/galive_server_logic/build.gradle
+++ b/galive_server_logic/build.gradle
@@ -5,6 +5,7 @@ dependencies {
  	compile group: 'org.mongodb', name: 'mongo-java-driver', version: '3.4.1'
     compile group: 'org.mongodb.morphia', name: 'morphia', version: '1.3.0'
     compile group: 'redis.clients', name: 'jedis', version: '2.9.0'
+    compile group: 'commons-pool', name: 'commons-pool', version: '1.6'
     compile group: 'org.apache.httpcomponents', name: 'httpclient', version: '4.5.2'
     compile group: 'com.fasterxml.jackson.core', name: 'jackson-core', version: '2.8.5'
     compile group: 'com.fasterxml.jackson.core', name: 'jackson-annotations', version: '2.8.5'
