--- a/src/main/resources/develop/jdbc.properties
+++ b/src/main/resources/develop/jdbc.properties
@@ -27,13 +27,13 @@ mongo.socketKeepAlive=false
 redis.keyPrefix=galive_video++:
 redis.host=127.0.0.1
 redis.port=6379
-redis.maxTotal=50000
-redis.maxIdle=10000
+redis.maxTotal=1000
+redis.maxIdle=500
 redis.connectTimeout=30000
 redis.maxWaitMillis=30000
-redis.testWhileIdle=false
-redis.testOnBorrow=false
-redis.testOnReturn=false
+redis.testWhileIdle=true
+redis.testOnBorrow=true
+redis.testOnReturn=true
 
 
 
