--- a/src/main/resources/distribution/jdbc.properties
+++ b/src/main/resources/distribution/jdbc.properties
@@ -23,16 +23,16 @@ mongo.socketKeepAlive=false
 
 #redis.auth=superman
 
-redis.keyPrefix=galive:
+redis.keyPrefix=galive_video++:
 redis.host=127.0.0.1
 redis.port=6379
-redis.maxTotal=50000
-redis.maxIdle=10000
-redis.connectTimeout=60000
-redis.maxWaitMillis=60000
-redis.testWhileIdle=false
+redis.maxTotal=1000
+redis.maxIdle=500
+redis.connectTimeout=30000
+redis.maxWaitMillis=30000
+redis.testWhileIdle=true
 redis.testOnBorrow=true
-redis.testOnReturn=false
+redis.testOnReturn=true
 
 
 
