--- a/build.gradle
+++ b/build.gradle
@@ -50,6 +50,7 @@ dependencies {
 
 task fatJar(type: Jar) {
     manifest {
+        //noinspection GroovyAssignabilityCheck
         attributes 	'Implementation-Title': 'galive_server_logic',
                 'Implementation-Version': version,
                 'Main-Class': 'com.galive.logic.ApplicationMain'
