--- a/src/main/resources/distribution/jdbc.properties
+++ b/src/main/resources/distribution/jdbc.properties
@@ -11,7 +11,7 @@ mongo.host=127.0.0.1
 mongo.port=27017
 mongo.username=admin
 mongo.password=super@123$
-mongo.dbName=livex
+mongo.dbName=livex_1_0
 mongo.poolSize=50
 mongo.threadsAllowedToBlockForConnectionMultiplier=10
 mongo.maxWaitTime=30000
@@ -23,7 +23,7 @@ mongo.socketKeepAlive=false
 
 #redis.auth=superman
 
-redis.keyPrefix=livex:
+redis.keyPrefix=livex_1_0:
 redis.host=127.0.0.1
 redis.port=6379
 redis.maxTotal=1000
