--- a/build.gradle
+++ b/build.gradle
@@ -46,6 +46,8 @@ dependencies {
     compile group: 'com.fasterxml.jackson.core', name: 'jackson-annotations', version: '2.8.5'
     compile group: 'com.fasterxml.jackson.core', name: 'jackson-databind', version: '2.8.5'
 
+    compile group: 'org.eclipse.jetty.aggregate', name: 'jetty-all-server', version: '8.2.0.v20160908'
+
 }
 
 task fatJar(type: Jar) {
