--- a/build.gradle
+++ b/build.gradle
@@ -46,7 +46,10 @@ dependencies {
     compile group: 'com.fasterxml.jackson.core', name: 'jackson-annotations', version: '2.8.5'
     compile group: 'com.fasterxml.jackson.core', name: 'jackson-databind', version: '2.8.5'
 
+    compile group: 'javax.websocket', name: 'javax.websocket-api', version: '1.1'
     compile group: 'org.eclipse.jetty', name: 'jetty-server', version: '9.4.0.v20161208'
+    compile group: 'org.eclipse.jetty.websocket', name: 'websocket-server', version: '9.4.0.v20161208'
+    compile group: 'org.eclipse.jetty.websocket', name: 'websocket-api', version: '9.4.0.v20161208'
 
 }
 
